# 120-datasets

0048ef-Expression_Parser_Calculator_Fix/: .gitignore  Dockerfile  README.md  docker-compose.yml
00e94b-Database_Level_Error_Handling_Without_Behavioral_Change/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
02a2c8-Optimizing_DNA_sequence_pattern_matching/: .gitignore  Dockerfile  README.md  docker-compose.yml
02b471-offline_first_task_management_architecture/: .gitignore  Dockerfile  README.md  docker-compose.yml
04be3a-Chat_Service_Unit_Tests/: .gitignore  Dockerfile  README.md  docker-compose.yml
06e4b7-simplex-algorithm/: .gitignore  README.md  requirements.txt
0c1112-Async_Generator/: .gitignore  Dockerfile  README.md  docker-compose.yml
174f77-Minimal_coffee_shop_service_stack/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod
17b40f-De_obfuscation_of_a_collaborative_go_backend/: .gitignore  Dockerfile  README.md  buildspec.yml  docker-compose.yml  go.mod  run_evaluation.ps1  run_evaluation.sh
1be8fa-Rust_Text_Processor_Performance/: .gitignore  Dockerfile  README.md  docker-compose.yml
20fa0d-Optimizing_the_chaotic_multi-module_orchestrator/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
350f90-bookstore-service-implementation/repository_after/bookstore_backend/: Cargo.toml  Dockerfile  verify_endpoints.py
350f90-bookstore-service-implementation/repository_after/bookstore_backend/src/: main.rs  state.rs
351e96-base85-refactor/: .gitignore  (+3 more)
(+1152 files in other folders)
