[package]
name = "bookstore_backend"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
